- Fixed various crashes when adding or removing certain types of cyberware, bioware, adept powers, or qualities that interacted with augmented attributes.
- The calendar tab now properly support colored entries.

Data Changes:
- The Sound Link Audio Enhancement entry has had its sourcebook reference changed to RF 247, as it is the only place where the gear's price is listed.
- Barehanded Adept no longer shows "T, T (A)" after its name after it is added.
- Vehicle and drone mods that rely on a vehicle stat to calculate costs now properly use a value of 0.5 in place of that stat for vehicles and drones with a stat of 0 (e.g. Body 0 drones).
- Fixed the Speed and Acceleration of the Big Bazoo Redline and Big Bazoo Chrome.

Changed/New Strings:
- Tip_SpellDrain
- Tip_SpellDrainBase
- Tip_ComplexFormFading
- Tip_ComplexFormFadingBase
- Message_UndoBrokenSkillGroup
- MessageTitle_UndoBrokenSkillGroup
- Label_OtherLiftAndCarryLimits
- Label_OtherLiftAndCarryLimitsFormat
- Tip_OtherLiftAndCarryLimits
- String_Encumbrance
- Label_CarriedWeight
- Label_CharacterOptions_WeightDecimalPlaces
- Label_CharacterOptions_LiftLimit
- Label_CharacterOptions_CarryLimit
- Label_CharacterOptions_EncumbranceIntervalLeft
- Label_CharacterOptions_EncumbranceIntervalRight
- Label_CharacterOptions_EncumbrancePenaltiesHeader
- Checkbox_CharacterOptions_EncumbrancePenaltyPhysicalLimit
- Checkbox_CharacterOptions_EncumbrancePenaltyMovementSpeed
- Checkbox_CharacterOptions_EncumbrancePenaltyAgility
- Checkbox_CharacterOptions_EncumbrancePenaltyReaction
- Checkbox_CharacterOptions_EncumbrancePenaltyWoundModifier
- Label_OtherLiftAndCarryHits
- Label_SelectBP_MaxNuyen
- Message_AttributeMaximum
- Message_TooManyAttributesAtMax
- Label_CharacterOptions_MaxNumberMaxAttributes
- Label_CharacterOptions_MaxSkillRating
- Label_CharacterOptions_MaxKnowledgeSkillRating

Removed Strings:
- Tip_LiftAndCarry
- Tip_WeaponInstalled

Build 221
Application Changes: